--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Feedback Form</h2>
 	<form action="" method="post">
         <label for="">Name</label>
         <input type="text" name="name" id="name" minlength="3" maxlength="50" required placeholder="Name">
