--- a/main.html
+++ b/main.html
@@ -9,21 +9,21 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h2>Feedback Form</h2>
-	<form action="" method="post">
-        <label for="">Name</label>
-        <input type="text" name="name" id="name" minlength="3" maxlength="50" required placeholder="Name">
-        <br>
-        <label for="">Portfolio</label>
-        <input type="url" name="Portfolio" id="portfolio" required placeholder="Enter url">
-        <br>
-        <label for="">Favorite Color</label>
-        <input type="color" name="favColor" id="favColor" required>
-        <br>
-        <label for="">Likeness</label>
-        <input type="range" name="likeness" id="likeness" min="1" max="100">
-        <br>
-        <button type="submit">Submit</button>
-    </form>
+<form action="" method="post">
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" minlength="3" maxlength="50" required placeholder="Name">
+    <br>
+    <label for="portfolio">Portfolio</label>
+    <input type="url" name="portfolio" id="portfolio" required placeholder="Enter URL">
+    <br>
+    <label for="favColor">Favorite Color</label>
+    <input type="color" name="favColor" id="favColor" required>
+    <br>
+    <label for="likeness">Likeness</label>
+    <input type="range" name="likeness" id="likeness" min="1" max="100">
+    <br>
+    <button type="submit">Submit</button>
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
